Fix Code Smells